--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Prototyping Connected Products | Group 2
+description: This is the documentation of the prototyping process of a connected wheelchair
