--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Prototyping Connected Products | Group 2
-description: Prototyping a connected wheelchair
+#title: Prototyping Connected Products | Group 2
+#description: Prototyping a connected wheelchair
