--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,6 @@
+<a href="test">TEST LINK</a>
+
 theme: jekyll-theme-slate
 #title: Prototyping Connected Products | Group 2
 #description: Prototyping a connected wheelchair
+
