--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-
+<div>test</div>
 theme: jekyll-theme-slate
 title: Prototyping Connected Products | Group 2
 description: Prototyping a connected wheelchair
