--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
 title: Prototyping Connected Products | Group 2
-description: Prototyping a connected wheelchair
+description: A connected wheelchair for kids
 
 
