--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: Prototyping Connected Products | Group 2
+title: Prototyping Connected Products ID5415 | Group 2: Niels Weggeman and Gal Elbo Rimon
 description: A connected wheelchair for kids
 
 
